# renderer

./: .gitignore  Cargo.toml
shaders/difference-of-gaussians/: fragment.wgsl
shaders/flow-based-xdog/: fragment.wgsl
shaders/gaussian-blur/: DoG.frag  DoG.vert  fragment.wgsl
src/: amain.rs  gui.rs  isr.rs  main.rs  shader.wgsl  ymain.rs  zmain.rs
