[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.5"
wgpu = "0.15.0"
pollster = "0.2.5"
bytemuck = "1.13.0"
cgmath = "0.18"
anyhow = "1.0"
image = "0.23"
wgpu-profiler = "0.16.1"