[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
winit = "0.27.5"
wgpu = "0.15.0"
pollster = "0.2.5"
bytemuck = "1.13.0"
cgmath = "0.18"
anyhow = "1.0"
image = "0.23"
wgpu-profiler = "0.16.1"
rand = "0.8.5"
eframe = "0.26.2"
env_logger = "0.11.3"
rfd = "0.10"
egui_wgpu_backend = "0.28.0"
egui_winit_platform = "0.21.0"
egui-wgpu = "0.26.2"
egui_demo_lib = "0.26.2"